Proyecto/Isaias_a00988525/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> ENDFILE
Rule 7     var_declaration -> type_specifier ID SEMICOLON
Rule 8     var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
Rule 9     type_specifier -> INT
Rule 10    type_specifier -> VOID
Rule 11    fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt
Rule 12    params -> param_list
Rule 13    params -> VOID
Rule 14    param_list -> param_list COMA param
Rule 15    param_list -> param
Rule 16    param -> type_specifier ID
Rule 17    param -> type_specifier ID LBRACKET RBRACKET
Rule 18    compound_stmt -> LKEY local_declarations statement_list RKEY
Rule 19    local_declarations -> local_declarations var_declaration
Rule 20    local_declarations -> empty
Rule 21    statement_list -> statement_list statement
Rule 22    statement_list -> empty
Rule 23    statement -> expression_stmt
Rule 24    statement -> compound_stmt
Rule 25    statement -> selection_stmt
Rule 26    statement -> iteration_stmt
Rule 27    statement -> return_stmt
Rule 28    expression_stmt -> expression SEMICOLON
Rule 29    expression_stmt -> SEMICOLON
Rule 30    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 31    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 32    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 33    return_stmt -> RETURN SEMICOLON
Rule 34    return_stmt -> RETURN expression SEMICOLON
Rule 35    expression -> var ASSIGN expression
Rule 36    expression -> simple_expression
Rule 37    var -> ID
Rule 38    var -> ID LBRACKET expression RBRACKET
Rule 39    simple_expression -> additive_expression relop additive_expression
Rule 40    simple_expression -> additive_expression
Rule 41    relop -> LOEQU
Rule 42    relop -> LTHAN
Rule 43    relop -> MTHAN
Rule 44    relop -> MOEQU
Rule 45    relop -> EQUALS
Rule 46    relop -> DIFF
Rule 47    additive_expression -> additive_expression addop term
Rule 48    additive_expression -> term
Rule 49    addop -> PLUS
Rule 50    addop -> MINUS
Rule 51    term -> term mulop factor
Rule 52    term -> factor
Rule 53    mulop -> TIMES
Rule 54    mulop -> DIVIDE
Rule 55    factor -> LPAREN expression RPAREN
Rule 56    factor -> var
Rule 57    factor -> call
Rule 58    factor -> NUM
Rule 59    call -> ID LPAREN args RPAREN
Rule 60    args -> arg_list
Rule 61    args -> empty
Rule 62    arg_list -> arg_list COMA expression
Rule 63    arg_list -> expression
Rule 64    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 35
COMA                 : 14 62
DIFF                 : 46
DIVIDE               : 54
ELSE                 : 31
ENDFILE              : 6
EQUALS               : 45
ID                   : 7 8 11 16 17 37 38 59
IF                   : 30 31
INT                  : 9
LBRACKET             : 8 17 38
LKEY                 : 18
LOEQU                : 41
LPAREN               : 11 30 31 32 55 59
LTHAN                : 42
MINUS                : 50
MOEQU                : 44
MTHAN                : 43
NUM                  : 8 58
PLUS                 : 49
RBRACKET             : 8 17 38
RETURN               : 33 34
RKEY                 : 18
RPAREN               : 11 30 31 32 55 59
SEMICOLON            : 7 8 28 29 33 34
TIMES                : 53
VOID                 : 10 13
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

additive_expression  : 39 39 40 47
addop                : 47
arg_list             : 60 62
args                 : 59
call                 : 57
compound_stmt        : 11 24
declaration          : 2 3
declaration_list     : 1 2
empty                : 20 22 61
expression           : 28 30 31 32 34 35 38 55 62 63
expression_stmt      : 23
factor               : 51 52
fun_declaration      : 5
iteration_stmt       : 26
local_declarations   : 18 19
mulop                : 51
param                : 14 15
param_list           : 12 14
params               : 11
program              : 0
relop                : 39
return_stmt          : 27
selection_stmt       : 25
simple_expression    : 36
statement            : 21 30 31 31 32
statement_list       : 18 21
term                 : 47 48 51
type_specifier       : 7 8 11 16 17
var                  : 35 56
var_declaration      : 4 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . ENDFILE
    (7) var_declaration -> . type_specifier ID SEMICOLON
    (8) var_declaration -> . type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
    (11) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID

    ENDFILE         shift and go to state 6
    INT             shift and go to state 8
    VOID            shift and go to state 9

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . ENDFILE
    (7) var_declaration -> . type_specifier ID SEMICOLON
    (8) var_declaration -> . type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
    (11) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    ENDFILE         shift and go to state 6
    INT             shift and go to state 8
    VOID            shift and go to state 9

    declaration                    shift and go to state 10
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 7

state 3

    (3) declaration_list -> declaration .

    ENDFILE         reduce using rule 3 (declaration_list -> declaration .)
    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    ENDFILE         reduce using rule 4 (declaration -> var_declaration .)
    INT             reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    ENDFILE         reduce using rule 5 (declaration -> fun_declaration .)
    INT             reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) declaration -> ENDFILE .

    ENDFILE         reduce using rule 6 (declaration -> ENDFILE .)
    INT             reduce using rule 6 (declaration -> ENDFILE .)
    VOID            reduce using rule 6 (declaration -> ENDFILE .)
    $end            reduce using rule 6 (declaration -> ENDFILE .)


state 7

    (7) var_declaration -> type_specifier . ID SEMICOLON
    (8) var_declaration -> type_specifier . ID LBRACKET NUM RBRACKET SEMICOLON
    (11) fun_declaration -> type_specifier . ID LPAREN params RPAREN compound_stmt

    ID              shift and go to state 11


state 8

    (9) type_specifier -> INT .

    ID              reduce using rule 9 (type_specifier -> INT .)


state 9

    (10) type_specifier -> VOID .

    ID              reduce using rule 10 (type_specifier -> VOID .)


state 10

    (2) declaration_list -> declaration_list declaration .

    ENDFILE         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 11

    (7) var_declaration -> type_specifier ID . SEMICOLON
    (8) var_declaration -> type_specifier ID . LBRACKET NUM RBRACKET SEMICOLON
    (11) fun_declaration -> type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMICOLON       shift and go to state 12
    LBRACKET        shift and go to state 13
    LPAREN          shift and go to state 14


state 12

    (7) var_declaration -> type_specifier ID SEMICOLON .

    ENDFILE         reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    INT             reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    RKEY            reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    LKEY            reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    NUM             reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)


state 13

    (8) var_declaration -> type_specifier ID LBRACKET . NUM RBRACKET SEMICOLON

    NUM             shift and go to state 15


state 14

    (11) fun_declaration -> type_specifier ID LPAREN . params RPAREN compound_stmt
    (12) params -> . param_list
    (13) params -> . VOID
    (14) param_list -> . param_list COMA param
    (15) param_list -> . param
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID

    VOID            shift and go to state 19
    INT             shift and go to state 8

    type_specifier                 shift and go to state 16
    params                         shift and go to state 17
    param_list                     shift and go to state 18
    param                          shift and go to state 20

state 15

    (8) var_declaration -> type_specifier ID LBRACKET NUM . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 21


state 16

    (16) param -> type_specifier . ID
    (17) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 22


state 17

    (11) fun_declaration -> type_specifier ID LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 23


state 18

    (12) params -> param_list .
    (14) param_list -> param_list . COMA param

    RPAREN          reduce using rule 12 (params -> param_list .)
    COMA            shift and go to state 24


state 19

    (13) params -> VOID .
    (10) type_specifier -> VOID .

    RPAREN          reduce using rule 13 (params -> VOID .)
    ID              reduce using rule 10 (type_specifier -> VOID .)


state 20

    (15) param_list -> param .

    COMA            reduce using rule 15 (param_list -> param .)
    RPAREN          reduce using rule 15 (param_list -> param .)


state 21

    (8) var_declaration -> type_specifier ID LBRACKET NUM RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 25


state 22

    (16) param -> type_specifier ID .
    (17) param -> type_specifier ID . LBRACKET RBRACKET

    COMA            reduce using rule 16 (param -> type_specifier ID .)
    RPAREN          reduce using rule 16 (param -> type_specifier ID .)
    LBRACKET        shift and go to state 26


state 23

    (11) fun_declaration -> type_specifier ID LPAREN params RPAREN . compound_stmt
    (18) compound_stmt -> . LKEY local_declarations statement_list RKEY

    LKEY            shift and go to state 28

    compound_stmt                  shift and go to state 27

state 24

    (14) param_list -> param_list COMA . param
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID

    INT             shift and go to state 8
    VOID            shift and go to state 9

    param                          shift and go to state 29
    type_specifier                 shift and go to state 16

state 25

    (8) var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .

    ENDFILE         reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    INT             reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    VOID            reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    $end            reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    RKEY            reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    SEMICOLON       reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    LKEY            reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    IF              reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    WHILE           reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    RETURN          reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    ID              reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    LPAREN          reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)
    NUM             reduce using rule 8 (var_declaration -> type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .)


state 26

    (17) param -> type_specifier ID LBRACKET . RBRACKET

    RBRACKET        shift and go to state 30


state 27

    (11) fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .

    ENDFILE         reduce using rule 11 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    INT             reduce using rule 11 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    VOID            reduce using rule 11 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    $end            reduce using rule 11 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)


state 28

    (18) compound_stmt -> LKEY . local_declarations statement_list RKEY
    (19) local_declarations -> . local_declarations var_declaration
    (20) local_declarations -> . empty
    (64) empty -> .

    INT             reduce using rule 64 (empty -> .)
    VOID            reduce using rule 64 (empty -> .)
    RKEY            reduce using rule 64 (empty -> .)
    SEMICOLON       reduce using rule 64 (empty -> .)
    LKEY            reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    RETURN          reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)
    LPAREN          reduce using rule 64 (empty -> .)
    NUM             reduce using rule 64 (empty -> .)

    local_declarations             shift and go to state 31
    empty                          shift and go to state 32

state 29

    (14) param_list -> param_list COMA param .

    COMA            reduce using rule 14 (param_list -> param_list COMA param .)
    RPAREN          reduce using rule 14 (param_list -> param_list COMA param .)


state 30

    (17) param -> type_specifier ID LBRACKET RBRACKET .

    COMA            reduce using rule 17 (param -> type_specifier ID LBRACKET RBRACKET .)
    RPAREN          reduce using rule 17 (param -> type_specifier ID LBRACKET RBRACKET .)


state 31

    (18) compound_stmt -> LKEY local_declarations . statement_list RKEY
    (19) local_declarations -> local_declarations . var_declaration
    (21) statement_list -> . statement_list statement
    (22) statement_list -> . empty
    (7) var_declaration -> . type_specifier ID SEMICOLON
    (8) var_declaration -> . type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
    (64) empty -> .
    (9) type_specifier -> . INT
    (10) type_specifier -> . VOID

    RKEY            reduce using rule 64 (empty -> .)
    SEMICOLON       reduce using rule 64 (empty -> .)
    LKEY            reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    RETURN          reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)
    LPAREN          reduce using rule 64 (empty -> .)
    NUM             reduce using rule 64 (empty -> .)
    INT             shift and go to state 8
    VOID            shift and go to state 9

    statement_list                 shift and go to state 33
    var_declaration                shift and go to state 34
    empty                          shift and go to state 35
    type_specifier                 shift and go to state 36

state 32

    (20) local_declarations -> empty .

    INT             reduce using rule 20 (local_declarations -> empty .)
    VOID            reduce using rule 20 (local_declarations -> empty .)
    RKEY            reduce using rule 20 (local_declarations -> empty .)
    SEMICOLON       reduce using rule 20 (local_declarations -> empty .)
    LKEY            reduce using rule 20 (local_declarations -> empty .)
    IF              reduce using rule 20 (local_declarations -> empty .)
    WHILE           reduce using rule 20 (local_declarations -> empty .)
    RETURN          reduce using rule 20 (local_declarations -> empty .)
    ID              reduce using rule 20 (local_declarations -> empty .)
    LPAREN          reduce using rule 20 (local_declarations -> empty .)
    NUM             reduce using rule 20 (local_declarations -> empty .)


state 33

    (18) compound_stmt -> LKEY local_declarations statement_list . RKEY
    (21) statement_list -> statement_list . statement
    (23) statement -> . expression_stmt
    (24) statement -> . compound_stmt
    (25) statement -> . selection_stmt
    (26) statement -> . iteration_stmt
    (27) statement -> . return_stmt
    (28) expression_stmt -> . expression SEMICOLON
    (29) expression_stmt -> . SEMICOLON
    (18) compound_stmt -> . LKEY local_declarations statement_list RKEY
    (30) selection_stmt -> . IF LPAREN expression RPAREN statement
    (31) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (32) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (33) return_stmt -> . RETURN SEMICOLON
    (34) return_stmt -> . RETURN expression SEMICOLON
    (35) expression -> . var ASSIGN expression
    (36) expression -> . simple_expression
    (37) var -> . ID
    (38) var -> . ID LBRACKET expression RBRACKET
    (39) simple_expression -> . additive_expression relop additive_expression
    (40) simple_expression -> . additive_expression
    (47) additive_expression -> . additive_expression addop term
    (48) additive_expression -> . term
    (51) term -> . term mulop factor
    (52) term -> . factor
    (55) factor -> . LPAREN expression RPAREN
    (56) factor -> . var
    (57) factor -> . call
    (58) factor -> . NUM
    (59) call -> . ID LPAREN args RPAREN

    RKEY            shift and go to state 37
    SEMICOLON       shift and go to state 45
    LKEY            shift and go to state 28
    IF              shift and go to state 46
    WHILE           shift and go to state 48
    RETURN          shift and go to state 49
    ID              shift and go to state 52
    LPAREN          shift and go to state 47
    NUM             shift and go to state 57

    statement                      shift and go to state 38
    expression_stmt                shift and go to state 39
    compound_stmt                  shift and go to state 40
    selection_stmt                 shift and go to state 41
    iteration_stmt                 shift and go to state 42
    return_stmt                    shift and go to state 43
    expression                     shift and go to state 44
    var                            shift and go to state 50
    simple_expression              shift and go to state 51
    additive_expression            shift and go to state 53
    term                           shift and go to state 54
    factor                         shift and go to state 55
    call                           shift and go to state 56

state 34

    (19) local_declarations -> local_declarations var_declaration .

    INT             reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    VOID            reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    RKEY            reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    SEMICOLON       reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    LKEY            reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    IF              reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    WHILE           reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    RETURN          reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    ID              reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    LPAREN          reduce using rule 19 (local_declarations -> local_declarations var_declaration .)
    NUM             reduce using rule 19 (local_declarations -> local_declarations var_declaration .)


state 35

    (22) statement_list -> empty .

    RKEY            reduce using rule 22 (statement_list -> empty .)
    SEMICOLON       reduce using rule 22 (statement_list -> empty .)
    LKEY            reduce using rule 22 (statement_list -> empty .)
    IF              reduce using rule 22 (statement_list -> empty .)
    WHILE           reduce using rule 22 (statement_list -> empty .)
    RETURN          reduce using rule 22 (statement_list -> empty .)
    ID              reduce using rule 22 (statement_list -> empty .)
    LPAREN          reduce using rule 22 (statement_list -> empty .)
    NUM             reduce using rule 22 (statement_list -> empty .)


state 36

    (7) var_declaration -> type_specifier . ID SEMICOLON
    (8) var_declaration -> type_specifier . ID LBRACKET NUM RBRACKET SEMICOLON

    ID              shift and go to state 58


state 37

    (18) compound_stmt -> LKEY local_declarations statement_list RKEY .

    ENDFILE         reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    INT             reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    VOID            reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    $end            reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    RKEY            reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    SEMICOLON       reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    LKEY            reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    IF              reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    WHILE           reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    RETURN          reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    ID              reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    LPAREN          reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    NUM             reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)
    ELSE            reduce using rule 18 (compound_stmt -> LKEY local_declarations statement_list RKEY .)


state 38

    (21) statement_list -> statement_list statement .

    RKEY            reduce using rule 21 (statement_list -> statement_list statement .)
    SEMICOLON       reduce using rule 21 (statement_list -> statement_list statement .)
    LKEY            reduce using rule 21 (statement_list -> statement_list statement .)
    IF              reduce using rule 21 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 21 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 21 (statement_list -> statement_list statement .)
    ID              reduce using rule 21 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 21 (statement_list -> statement_list statement .)
    NUM             reduce using rule 21 (statement_list -> statement_list statement .)


state 39

    (23) statement -> expression_stmt .

    RKEY            reduce using rule 23 (statement -> expression_stmt .)
    SEMICOLON       reduce using rule 23 (statement -> expression_stmt .)
    LKEY            reduce using rule 23 (statement -> expression_stmt .)
    IF              reduce using rule 23 (statement -> expression_stmt .)
    WHILE           reduce using rule 23 (statement -> expression_stmt .)
    RETURN          reduce using rule 23 (statement -> expression_stmt .)
    ID              reduce using rule 23 (statement -> expression_stmt .)
    LPAREN          reduce using rule 23 (statement -> expression_stmt .)
    NUM             reduce using rule 23 (statement -> expression_stmt .)
    ELSE            reduce using rule 23 (statement -> expression_stmt .)


state 40

    (24) statement -> compound_stmt .

    RKEY            reduce using rule 24 (statement -> compound_stmt .)
    SEMICOLON       reduce using rule 24 (statement -> compound_stmt .)
    LKEY            reduce using rule 24 (statement -> compound_stmt .)
    IF              reduce using rule 24 (statement -> compound_stmt .)
    WHILE           reduce using rule 24 (statement -> compound_stmt .)
    RETURN          reduce using rule 24 (statement -> compound_stmt .)
    ID              reduce using rule 24 (statement -> compound_stmt .)
    LPAREN          reduce using rule 24 (statement -> compound_stmt .)
    NUM             reduce using rule 24 (statement -> compound_stmt .)
    ELSE            reduce using rule 24 (statement -> compound_stmt .)


state 41

    (25) statement -> selection_stmt .

    RKEY            reduce using rule 25 (statement -> selection_stmt .)
    SEMICOLON       reduce using rule 25 (statement -> selection_stmt .)
    LKEY            reduce using rule 25 (statement -> selection_stmt .)
    IF              reduce using rule 25 (statement -> selection_stmt .)
    WHILE           reduce using rule 25 (statement -> selection_stmt .)
    RETURN          reduce using rule 25 (statement -> selection_stmt .)
    ID              reduce using rule 25 (statement -> selection_stmt .)
    LPAREN          reduce using rule 25 (statement -> selection_stmt .)
    NUM             reduce using rule 25 (statement -> selection_stmt .)
    ELSE            reduce using rule 25 (statement -> selection_stmt .)


state 42

    (26) statement -> iteration_stmt .

    RKEY            reduce using rule 26 (statement -> iteration_stmt .)
    SEMICOLON       reduce using rule 26 (statement -> iteration_stmt .)
    LKEY            reduce using rule 26 (statement -> iteration_stmt .)
    IF              reduce using rule 26 (statement -> iteration_stmt .)
    WHILE           reduce using rule 26 (statement -> iteration_stmt .)
    RETURN          reduce using rule 26 (statement -> iteration_stmt .)
    ID              reduce using rule 26 (statement -> iteration_stmt .)
    LPAREN          reduce using rule 26 (statement -> iteration_stmt .)
    NUM             reduce using rule 26 (statement -> iteration_stmt .)
    ELSE            reduce using rule 26 (statement -> iteration_stmt .)


state 43

    (27) statement -> return_stmt .
